--- a/test/tree/aoj_0489.test.cpp.md
+++ b/test/tree/aoj_0489.test.cpp.md
@@ -21,7 +21,7 @@ data:
     title: template/utils.hpp
   - icon: ':heavy_check_mark:'
     path: tree/Mo_on_Tree.hpp
-    title: tree/Mo_on_Tree.hpp
+    title: Mo on Tree
   - icon: ':heavy_check_mark:'
     path: tree/Tree_core.hpp
     title: tree/Tree_core.hpp
