[auto-verifier] docs commit 711f300e5cf2ecb1ea23f75828973b24fa10e2ec

--- a/fps998244353/fps998244353.hpp.md
+++ b/fps998244353/fps998244353.hpp.md
@@ -39,6 +39,9 @@ data:
   - icon: ':heavy_check_mark:'
     path: test/fps998244353/multipoint_evaluation_998244353.test.cpp
     title: test/fps998244353/multipoint_evaluation_998244353.test.cpp
+  - icon: ':heavy_check_mark:'
+    path: test/fps998244353/multipoint_evaluation_geo_998244353.test.cpp
+    title: test/fps998244353/multipoint_evaluation_geo_998244353.test.cpp
   _isVerificationFailed: false
   _pathExtension: hpp
   _verificationStatusIcon: ':heavy_check_mark:'
@@ -533,6 +536,7 @@ data:
   - test/fps998244353/multipoint_evaluation_998244353.test.cpp
   - test/fps998244353/convolution_998244353.test.cpp
   - test/fps998244353/Division_of_Polynomials_998244353.test.cpp
+  - test/fps998244353/multipoint_evaluation_geo_998244353.test.cpp
 documentation_of: fps998244353/fps998244353.hpp
 layout: document
 redirect_from:
