[auto-verifier] docs commit b174c1d55df256f0504a51e322778ecf9f54a036

--- a/fps998244353/modint998244353.hpp.md
+++ b/fps998244353/modint998244353.hpp.md
@@ -7,11 +7,53 @@ data:
   - icon: ':heavy_check_mark:'
     path: utility/modint.hpp
     title: utility/modint.hpp
-  _extendedRequiredBy: []
-  _extendedVerifiedWith: []
+  _extendedRequiredBy:
+  - icon: ':heavy_check_mark:'
+    path: fps998244353/bostan_mori.hpp
+    title: fps998244353/bostan_mori.hpp
+  - icon: ':heavy_check_mark:'
+    path: fps998244353/fps998244353.hpp
+    title: fps998244353/fps998244353.hpp
+  - icon: ':heavy_check_mark:'
+    path: fps998244353/multipoint_evaluation.hpp
+    title: fps998244353/multipoint_evaluation.hpp
+  - icon: ':heavy_check_mark:'
+    path: fps998244353/ntt998244353.hpp
+    title: fps998244353/ntt998244353.hpp
+  - icon: ':heavy_check_mark:'
+    path: fps998244353/polynomial_taylor_shift.hpp
+    title: fps998244353/polynomial_taylor_shift.hpp
+  - icon: ':warning:'
+    path: fps998244353/product_1_minus_x_pow_a.hpp
+    title: fps998244353/product_1_minus_x_pow_a.hpp
+  - icon: ':heavy_check_mark:'
+    path: fps998244353/sample_point_shift.hpp
+    title: fps998244353/sample_point_shift.hpp
+  _extendedVerifiedWith:
+  - icon: ':heavy_check_mark:'
+    path: test/fps998244353/Division_of_Polynomials_998244353.test.cpp
+    title: test/fps998244353/Division_of_Polynomials_998244353.test.cpp
+  - icon: ':heavy_check_mark:'
+    path: test/fps998244353/Kth_term_of_Linearly_Recurrent_Sequence.test.cpp
+    title: test/fps998244353/Kth_term_of_Linearly_Recurrent_Sequence.test.cpp
+  - icon: ':heavy_check_mark:'
+    path: test/fps998244353/convolution_998244353.test.cpp
+    title: test/fps998244353/convolution_998244353.test.cpp
+  - icon: ':heavy_check_mark:'
+    path: test/fps998244353/multipoint_evaluation_998244353.test.cpp
+    title: test/fps998244353/multipoint_evaluation_998244353.test.cpp
+  - icon: ':heavy_check_mark:'
+    path: test/fps998244353/multipoint_evaluation_geo_998244353.test.cpp
+    title: test/fps998244353/multipoint_evaluation_geo_998244353.test.cpp
+  - icon: ':heavy_check_mark:'
+    path: test/fps998244353/polynomial_taylor_shift_998244353.test.cpp
+    title: test/fps998244353/polynomial_taylor_shift_998244353.test.cpp
+  - icon: ':heavy_check_mark:'
+    path: test/fps998244353/shift_of_sampling_points_of_polynomial_998244353.test.cpp
+    title: test/fps998244353/shift_of_sampling_points_of_polynomial_998244353.test.cpp
   _isVerificationFailed: false
   _pathExtension: hpp
-  _verificationStatusIcon: ':warning:'
+  _verificationStatusIcon: ':heavy_check_mark:'
   attributes:
     links: []
   bundledCode: "#line 2 \"fps998244353/modint998244353.hpp\"\n\n#include <cassert>\n\
@@ -232,10 +274,24 @@ data:
   - math/prime.hpp
   isVerificationFile: false
   path: fps998244353/modint998244353.hpp
-  requiredBy: []
+  requiredBy:
+  - fps998244353/fps998244353.hpp
+  - fps998244353/polynomial_taylor_shift.hpp
+  - fps998244353/product_1_minus_x_pow_a.hpp
+  - fps998244353/sample_point_shift.hpp
+  - fps998244353/ntt998244353.hpp
+  - fps998244353/bostan_mori.hpp
+  - fps998244353/multipoint_evaluation.hpp
   timestamp: '2024-08-21 17:29:53+09:00'
-  verificationStatus: LIBRARY_NO_TESTS
-  verifiedWith: []
+  verificationStatus: LIBRARY_ALL_AC
+  verifiedWith:
+  - test/fps998244353/shift_of_sampling_points_of_polynomial_998244353.test.cpp
+  - test/fps998244353/convolution_998244353.test.cpp
+  - test/fps998244353/polynomial_taylor_shift_998244353.test.cpp
+  - test/fps998244353/Division_of_Polynomials_998244353.test.cpp
+  - test/fps998244353/multipoint_evaluation_geo_998244353.test.cpp
+  - test/fps998244353/Kth_term_of_Linearly_Recurrent_Sequence.test.cpp
+  - test/fps998244353/multipoint_evaluation_998244353.test.cpp
 documentation_of: fps998244353/modint998244353.hpp
 layout: document
 redirect_from:
